src/pages/create/Create.css
.create {
  color: #555;
  max-width: 480px;
  margin: 60px auto;
}

@media (max-width: 767.98px) {
  .create {
    max-width: 350px;
  }
}

.create label span {
  display: block;
  margin: 30px 0 10px;
}

.create p {
  margin-top: 10px;
  font-size: 0.8em;
}

.create button {
  display: block;
  width: 100%;
  font-size: 1em;
  color: #FFF;
  padding: 8px 0;
  border: 0;
  border-radius: 4px;
  background-color: #58249C;
  cursor: pointer;
  text-decoration: none;
  margin: 20px auto;
}

.create button:hover {
  filter: grayscale(50%);
}

.ingredients {
  display: flex;
  align-items: center;
}

.ingredients button {
  margin: 0 0 0 10px;
  flex-shrink: 2;
}

